--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div class="cabinet-container">
-        <img src="cabinet.jpg" class="cabinet-img" alt="Intelligence Cabinet">
+        <img src="cabinet_v2.jpg" class="cabinet-img" alt="Intelligence Cabinet">
         
         <div class="drawer-link drawer-1" onclick="alert('[접근 거부] 아직 열람할 수 없는 기밀입니다.')"></div>
         <div class="drawer-link drawer-2"></div>
