--- a/index.html
+++ b/index.html
@@ -66,20 +66,28 @@
         .d5 { top: 60%; left: 5%;  width: 45%; height: 28%; } /* EP1 연결 */
         .d6 { top: 60%; left: 51%; width: 45%; height: 28%; }
 
-        /* 서랍 이름표 글자 스타일 */
+               /* 서랍 이름표 글자 스타일 (수정본V2: 불투명한 명판 스타일) */
         .drawer-label {
             position: absolute;
-            top: 50%; /* 박스 내 세로 중앙 */
-            left: 50%; /* 박스 내 가로 중앙 */
-            transform: translate(-50%, -50%); /* 정확한 정중앙 정렬 */
-            font-size: 0.7rem; /* 글자 크기 */
-            color: #D4AF37; /* 금색 */
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%); /* 정중앙 정렬 */
+            
+            /* 여기부터가 핵심 변경 사항입니다 */
+            background-color: #080808; /* 뒤를 가리는 아주 어두운 검은색 배경 */
+            padding: 6px 12px; /* 글자 주변 여백을 줘서 네모난 판처럼 만듦 */
+            border: 1px solid rgba(212, 175, 55, 0.5); /* 은은한 금색 테두리 */
+            box-shadow: inset 0 0 10px #000; /* 안쪽으로 깊이감을 주는 그림자 */
+            
+            /* 글자 스타일 */
+            font-size: 0.65rem; /* 크기 미세 조정 */
+            color: #D4AF37; /* 금색 글자 */
             font-weight: bold;
             letter-spacing: 1px;
             text-align: center;
-            pointer-events: none; /* 글자가 클릭을 방해하지 않게 함 */
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.9); /* 글자 가독성 강화 */
-            white-space: nowrap; /* 줄바꿈 방지 */
+            pointer-events: none;
+            white-space: nowrap;
+            z-index: 10; /* 다른 요소보다 무조건 위에 보이게 함 */
         }
 
         /* 5. 하단 푸터 (기존 디자인 복구) */
