--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
             
             /* 여기부터가 핵심 변경 사항입니다 */
             background-color: #080808; /* 뒤를 가리는 아주 어두운 검은색 배경 */
-            padding: 6px 12px; /* 글자 주변 여백을 줘서 네모난 판처럼 만듦 */
-            border: 1px solid rgba(212, 175, 55, 0.5); /* 은은한 금색 테두리 */
-            box-shadow: inset 0 0 10px #000; /* 안쪽으로 깊이감을 주는 그림자 */
+            padding: 10px 20px; /* 글자 주변 여백을 줘서 네모난 판처럼 만듦 */
+            border: 2px solid #D4AF37; /* 은은한 금색 테두리 */
+            box-shadow: 0 0 15px rgba(0, 0, 0, 1), inset 0 0 10px #000;
             
-            /* 글자 스타일 */
-            font-size: 0.65rem; /* 크기 미세 조정 */
-            color: #D4AF37; /* 금색 글자 */
+            /* 글자 크기 확대 */
+            font-size: 1.2rem; /* 기존 0.7rem에서 대폭 확대 */
+            color: #D4AF37; 
             font-weight: bold;
-            letter-spacing: 1px;
+            letter-spacing: 2px; /* 자간을 넓혀 가독성 확보 */
             text-align: center;
             pointer-events: none;
             white-space: nowrap;
-            z-index: 10; /* 다른 요소보다 무조건 위에 보이게 함 */
+            z-index: 10;
         }
 
         /* 5. 하단 푸터 (기존 디자인 복구) */
